--- a/QuestionSort.cabal
+++ b/QuestionSort.cabal
@@ -2,12 +2,12 @@ name:                QuestionSort
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/QuestionSort#readme
+homepage:            https://github.com/MarcusVoelker/QuestionSort#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2022 Author name here
+author:              Marcus Völker
+maintainer:          marcus.voelker@rwth-aachen.de
+copyright:           2022 Marcus Völker
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
